# Sudoku

./: Sudoku_playground.ipynb  app.py  board.py  game.py  process_img.py  pyproject.toml  train_model.py  use_cam.py
ocr_output/: digit_classifier.h5  new_model.h5
sudoku_solver/: camera.py  process_img.py
sudoku_solver/models/: OCRNet.py  __init__.py
sudoku_solver/utils/: utils.py
