[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = ""
authors = ["Anthony Keelan <anthony.keelan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
